Added the large fleet input fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
     </activity>
     <activity android:name=".activities.RaceSelectActivity">
     </activity>
+    <activity android:name=".activities.RaceInput2Activity">
+    </activity>
+    <activity android:name=".activities.LargeFleetRaceInputActivity">
+    </activity>
   </application>
 
 </manifest>
