Added events database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".activities.MainActivity">
+    <activity android:name=".activities.EventSelectActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -19,14 +19,13 @@
     <activity
       android:label="@string/title_activity_race_input"
       android:name=".activities.RaceInputActivity"
-      android:parentActivityName=".activities.MainActivity"
+      android:parentActivityName=".activities.EventSelectActivity"
       android:theme="@style/AppTheme.NoActionBar">
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
-        android:value="in.avimarine.racecommittee.activities.MainActivity"/>
+        android:value="in.avimarine.racecommittee.activities.EventSelectActivity"/>
     </activity>
-    <activity android:name=".activities.RaceSelectActivity">
-    </activity>
+    <activity android:name=".activities.RaceSelectActivity"/>
   </application>
 
 </manifest>
