--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="in.avimarine.racecommittee">
+  package="in.avimarine.rcrecorder">
 
   <application
     android:allowBackup="true"
@@ -9,7 +9,7 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:supportsRtl="true"
     android:theme="@style/AppTheme">
-    <activity android:name=".activities.EventSelectActivity">
+    <activity android:name="in.avimarine.rcrecorder.activities.EventSelectActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
 
@@ -18,14 +18,14 @@
     </activity>
     <activity
       android:label="@string/title_activity_race_input"
-      android:name=".activities.RaceInputActivity"
-      android:parentActivityName=".activities.EventSelectActivity"
+      android:name="in.avimarine.rcrecorder.activities.RaceInputActivity"
+      android:parentActivityName="in.avimarine.rcrecorder.activities.EventSelectActivity"
       android:theme="@style/AppTheme.NoActionBar">
       <meta-data
         android:name="android.support.PARENT_ACTIVITY"
-        android:value="in.avimarine.racecommittee.activities.EventSelectActivity"/>
+        android:value="in.avimarine.rcrecorder.activities.EventSelectActivity"/>
     </activity>
-    <activity android:name=".activities.RaceSelectActivity"/>
+    <activity android:name="in.avimarine.rcrecorder.activities.RaceSelectActivity"/>
   </application>
 
 </manifest>
