--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ tasks.matching { it instanceof Test }.all {
     testLogging.events = ["failed", "passed", "skipped"]
 }
 
-def final yourApplicationId = 'in.avimarine.racecommittee'
+def final yourApplicationId = 'in.avimarine.rcrecorder'
 android.variantFilter { variant ->
     if (variant.buildType.name == 'release' && variant.getFlavors().get(0).name == 'dev') {
         variant.setIgnore(true)
@@ -17,8 +17,8 @@ android.variantFilter { variant ->
 
 sonarqube {
     properties {
-        property "sonar.projectName", "RaceCommittee"
-        property "sonar.projectKey", "AVICommittee"
+        property "sonar.projectName", "RCRecorder"
+        property "sonar.projectKey", "AVIRCRecorder"
         //property "sonar.exclusions","build/**,**/*.png"
         //property "sonar.import_unknown_files", true
         //property "sonar.android.lint.report", "./build/outputs/lint-results.xml"
@@ -46,7 +46,7 @@ android {
     }
     compileSdkVersion 27
     defaultConfig {
-        applicationId "in.avimarine.racecommittee"
+        applicationId "in.avimarine.rcrecorder"
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
@@ -87,7 +87,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
-//    implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(":orccertificatesimporter")
     implementation project(":orcscorerxmlparser")
