Added initial file export. Fixed errors resulting from importing orcsc files with missing attributes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="in.avimarine.rcrecorder">
-
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
@@ -25,7 +25,8 @@
         android:name="android.support.PARENT_ACTIVITY"
         android:value="in.avimarine.rcrecorder.activities.EventSelectActivity"/>
     </activity>
-    <activity android:name="in.avimarine.rcrecorder.activities.RaceSelectActivity"/>
+    <activity android:name="in.avimarine.rcrecorder.activities.RaceSelectActivity"
+      android:theme="@style/AppTheme.NoActionBar"/>
   </application>
 
 </manifest>
